<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blured_bg_03"
    tools:context=".OtpAuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/screen_background_dark_transparent">

            <TextView
                android:id="@+id/HeadinggONE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/OtpAuth_Activity_Two_Text_One"
                android:textColor="#1AC307"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/HeadinggTWO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/OtpAuth_Activity_Two_Text_Two"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/HeadinggONE"
                app:layout_constraintTop_toBottomOf="@+id/HeadinggONE" />

            <TextView
                android:id="@+id/HEadinggTHREE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/pt_sans"
                android:text="@string/OtpAuth_Activity_Two_Text_Three"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/HeadinggONE"
                app:layout_constraintStart_toStartOf="@+id/HeadinggONE"
                app:layout_constraintTop_toBottomOf="@+id/HeadinggTWO" />

            <EditText
                android:id="@+id/OTPinput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:hint="@string/OtpAuth_Activity_Two_Text_Four"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/crome"
                app:layout_constraintEnd_toEndOf="@+id/HEadinggTHREE"
                app:layout_constraintStart_toStartOf="@+id/HEadinggTHREE"
                app:layout_constraintTop_toBottomOf="@+id/HEadinggTHREE" />

            <CheckBox
                android:id="@+id/checkBox_otpAc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/OtpAuth_Activity_Two_Text_Five"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/OTPinput"
                app:layout_constraintTop_toBottomOf="@+id/OTPinput" />

            <Button
                android:id="@+id/Otp_Verify_Btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_btn_shape"
                android:text="@string/OtpAuth_Activity_Two_Text_Six"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="#1AC307"
                app:layout_constraintEnd_toEndOf="@+id/OTPinput"
                app:layout_constraintStart_toStartOf="@+id/OTPinput"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_otpAc" />

            <TextView
                android:id="@+id/ResendOTPbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/OtpAuth_Activity_Two_Text_Seven"
                android:textColor="#1AC307"
                app:layout_constraintEnd_toEndOf="@+id/Otp_Verify_Btn"
                app:layout_constraintStart_toStartOf="@+id/Otp_Verify_Btn"
                app:layout_constraintTop_toBottomOf="@+id/Otp_Verify_Btn" />

            <ImageView
                android:id="@+id/StudioIconSmall"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:contentDescription="@string/All_Image_and_Icons_Media_Contant_Description"
                app:layout_constraintBottom_toTopOf="@+id/CR_1"
                app:layout_constraintEnd_toEndOf="@+id/CR_1"
                app:layout_constraintStart_toStartOf="@+id/CR_1"
                app:srcCompat="@drawable/rafale_studio_icon_clean_bg" />

            <TextView
                android:id="@+id/CR_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OtpAuth_Activity_Two_Text_Eight"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/CR_2"
                app:layout_constraintEnd_toEndOf="@+id/CR_2"
                app:layout_constraintStart_toStartOf="@+id/CR_2" />

            <TextView
                android:id="@+id/CR_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OtpAuth_Activity_Two_Text_Nine"
                android:textColor="#1AC307"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/CR_3"
                app:layout_constraintEnd_toEndOf="@+id/CR_3"
                app:layout_constraintStart_toStartOf="@+id/CR_3" />

            <TextView
                android:id="@+id/CR_3"
                android:layout_width="39dp"
                android:layout_height="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/OtpAuth_Activity_Two_Text_Ten"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>