<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/screen_background_dark_transparent">

            <ImageView
                android:id="@+id/Small_studio_Icon"
                android:layout_width="29dp"
                android:layout_height="35dp"
                android:contentDescription="@string/All_Image_and_Icons_Media_Contant_Description"
                app:layout_constraintBottom_toTopOf="@+id/copyRight_contant_One"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/rafale_studio_icon_clean_bg" />

            <TextView
                android:id="@+id/Text_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/Main_Activity_Text_One"
                android:textColor="#1AC307"
                android:textSize="46sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Text_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/adamina"
                android:text="@string/Main_Activity_Text_Two"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/Text_one"
                app:layout_constraintTop_toBottomOf="@+id/Text_one" />

            <TextView
                android:id="@+id/copyRight_contant_One"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Copyright_Content_One"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/copyRight_contant_Two"
                app:layout_constraintEnd_toEndOf="@+id/Small_studio_Icon"
                app:layout_constraintStart_toStartOf="@+id/Small_studio_Icon" />

            <TextView
                android:id="@+id/copyRight_contant_Two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Copyright_Content_Two"
                android:textColor="#1AC307"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/copyRight_contant_Three"
                app:layout_constraintEnd_toEndOf="@+id/copyRight_contant_One"
                app:layout_constraintStart_toStartOf="@+id/copyRight_contant_One" />

            <TextView
                android:id="@+id/copyRight_contant_Three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Copyright_Content_Three"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/copyRight_contant_Two"
                app:layout_constraintStart_toStartOf="@+id/copyRight_contant_Two" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>